@@ -20,6 +20,8 @@
 
 - Made rEFInd silent when timeout is -1.
 
+- Fixed handling of timeout == -1 when no keyboard is attached.
+
 - Introduced log file rotation -- if refind.log-old exists and logging is
   enabled, that log file is deleted and the existing log file is renamed to
   refind.log-old. This enables preservation of two log files, which is
